# HackAI-Hack-230675

./: README.md  Starter.py  pyproject.toml  requirements.txt
src/: main.py  private_keys.json
src/agents/client/: client.py
src/agents/fetcher/: __init__.py  fetcher.py
src/messages/: __init__.py  messages.py
src/templates/: email.html
src/utils/: __init__.py  email.py  utils.py
